workout (0.10) unstable; urgency=low

  * Store::SRM: use block timestamps as chunk-end on read *and* write...
  * wkdelta: make --field work
  * some bugfixes for subsecond timestamps/recints
  * fix reading HRM timestamps

 -- Rainer Clasen <bj@zuto.de>  Sat, 01 Aug 2009 22:33:11 +0200

workout (0.09) unstable; urgency=low

  * added wkdist, wkhisto
  * feed pre-build chart to MyChart::Gtk (obsoleting Workout::Gtk::Chart::*)
  * added torque info to Chunks and wkinfo output
  * added Workout::Filter::Zone - caculcate time in specified zones
  * added support for new SRM7 files introduced for PCVI
  * fixed bug in SRM6 writing where the power data was truncated to 2048W

 -- Rainer Clasen <bj@zuto.de>  Thu, 23 Jul 2009 09:51:04 +0200

workout (0.08) unstable; urgency=low

  * added Filter::FTP for calculating NP, VI, IF, and TSS
  * set window titles in GTK apps
  * added wkpmc for calculating and plotting CTL, ATL and TSB
  * added Filter::Max 
  * wkinfo: include 20min max power

 -- Rainer Clasen <bj@zuto.de>  Thu, 24 Apr 2009 12:13:28 +0200

workout (0.07) unstable; urgency=low

  * Store::HRM, Store::Wkt: use cached regexp for speedup
  * wkplot/wkdelta: use MyChart instead of gnuplot
  * Store::* added support for marker/lap data
  * wkdelta now allows to update the file
  * rewrote Store::SRM to use Store::Memory
  * added wkmodify for setting workout attributes
  * fixed SRM notes reading/writing
  * tons of bugfixes

 -- Rainer Clasen <bj@zuto.de>  Sat, 21 Feb 2009 21:19:14 +0100

workout (0.06) unstable; urgency=low

  * moved wkendure + wksend to wkdb package
  * wkdelta: display use info on startup
  * wkdelta: properly print delta to stdout

 -- Rainer Clasen <bj@zuto.de>  Tue, 27 Jan 2009 13:51:49 +0100

workout (0.05) unstable; urgency=low

  * added licence info
  * ignore windows cruft in HRM parser
  * updated usage info of wkmerge, wkdelta
  * added commandline options to wkdelta